src/main/java/com/example/rabam/error/PackageDeleteException.java
package com.example.rabam.error;

public class PackageDeleteException extends RuntimeException{
    public PackageDeleteException() {
        super("Packet didn't delete");
    }
}
